# face-recognition-backend

./: .coveragerc  .dockerignore  .env.example  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  API.md  ARCHITECTURE.md  ARCHITECTURE_COMPLIANCE.md  DEPLOYMENT.md  DEVELOPMENT.md  DOCKER_COMPOSE_USAGE.md  DOCKER_FIXES.md  Dockerfile  Dockerfile.dev  ENV_TOOLS_SUMMARY.md  INSTALLATION_REPORT.txt  MIGRATION_PLAN.md  MINIO_IMPORT_FIX.md  Makefile  PHASE2_SUMMARY.md  QUICKSTART.md  QUICK_START.md  QUICK_START_VENV.md  README.md  SECURITY.md  TZ_IMPROVEMENTS.md  VENV_SETUP.md  alembic.ini  check_phase1.py  diagnose_env.py  docker-compose.dev.yml  docker-compose.gpu.yml  docker-compose.ha.yml  docker-compose.loadtest.yml  docker-compose.monitoring.yml  docker-compose.prod.yml  docker-compose.test.yml  docker-compose.yml  evaluate.py  (+22 more)
.github/: changelog-config.json
.github/.github/workflows/: ci-cd.yml  release.yml
.github/workflows/: ci.yml  release.yml  scheduled.yml
alembic/: env.py  script.py.mako
alembic/versions/: 001_initial_migration.py  002_webhook_tables.py  4bf3a5f54be8_add_quality_score_to_reference.py  6245702b05ce_add_username_to_users_table.py  736c812b73c2_add_password_hash_to_users_table.py  a1b2c3d4e5f6_add_version_and_is_active_to_references.py  abc123_update_audit_logs_table.py  b0c43b264920_add_timezone_to_datetime_columns.py  f9a8c7b6d5e4_add_performance_indexes.py  xxxxx_add_performance_indexes.py  z999_merge_heads.py
app/: __init__.py  config.py  dependencies.py  locustfile.py  main.py
app/core/: biometric_encryption.py
app/db/: __init__.py  crud.py  database.py  models.py
app/middleware/: __init__.py  auth.py  cors.py  error_handler.py  logging.py  logging_middleware.py  metrics.py  rate_limit.py  request_logging.py
app/models/: Arkhitektura  __init__.py  active_liveness.py  face.py  minifasnet_v2_correct.py  reference.py  request.py  response.py  user.py  verification.py  webhook.py
app/routes/: __init__.py  admin.py  auth.py  face_recognition.py  health.py  liveness.py  metrics.py  reference.py  upload.py  verify.py  webhook.py
app/services/: __init__.py  active_liveness_service.py  anti_spoofing_service.py  audit_service.py  auth_service.py  biometric_storage.py  cache_service.py  database_service.py  encryption_service.py  face_occlusion_detector.py  face_verification_service.py  liveness_service.py  metrics_service.py  ml_service.py  reference_service.py  session_service.py  storage_service.py  validation_service.py  verify_service.py  webhook_service.py
app/tasks/: __init__.py  cleanup.py  scheduler.py
app/utils/: __init__.py  constants.py  decorators.py  depth_estimator.py  exceptions.py  eye_blink_detector.py  face_aligner.py  face_alignment_utils.py  file_utils.py  helpers.py  lighting_analyzer.py  logger.py  mouth_detector.py  security.py  structured_logging.py  validators.py  video_processing.py
docker/grafana/dashboards/: loadtest.json
docker/grafana/provisioning/: dashboards.yml
docker/prometheus/: loadtest.yml
docs/: API.md  COMPLIANCE_152_FZ.md  LOADTESTING.md  PERFORMANCE.md  webhook_integration.md
grafana/provisioning/dashboards/: gpu_metrics.json
migrations/versions/: 001_metrics_tables.py
monitoring/: README.md  prometheus.yml
monitoring/alertmanager/: alertmanager.yml
monitoring/grafana/dashboards/: biometric_metrics.json
monitoring/grafana/provisioning/dashboards/: dashboards.yml
monitoring/grafana/provisioning/datasources/: prometheus.yml
monitoring/prometheus/: prometheus.yml
monitoring/prometheus/rules/: biometric_alerts.yml
monitoring/rules/: biometric_alerts.yml  face-recognition-rules.yml
scripts/: README.md  check_compliance.py  check_existing_indexes.py  check_gpu.py  check_gpu.sh  check_index_size.py  compliance_requirements.json  delete_test_user.py  docker_health_check.sh  download_model.py  entrypoint.sh  fix_alembic_heads.py  gpu_metrics.py  health_check.sh  init_minio.py  migrate_add_threshold_column.py  monitor_index_usage.py  test_metrics_endpoints.py  validate_index_performance.py  validate_metrics.py
tests/: README.md  __init__.py  conftest.py  test_admin_endpoints.py  test_anti_spoofing_service.py  test_app.py  test_audit.py  test_auth.py  test_auth_endpoints.py  test_cleanup.py  test_concurrent.py  test_db.py  test_db_sync.py  test_encryption.py  test_health.py  test_logger.py  test_metrics.py  test_metrics_service.py  test_model.py  test_security.py  test_smoke.py  test_storage.py  test_upload.py  test_validators.py  test_webhook_integration.py  test_webhook_service.py
tests/datasets/: README.md
tests/e2e/: test_complete_scenarios.py
tests/integration/: test_api_endpoints.py  test_complete_flow.py  test_e2e_workflow.py  test_redis_postgres.py  test_verify_flow.py
tests/manual/: README.md
tests/performance/: load_test_verification.py  locustfile.py  test_lfw_benchmark.py  test_load.py  test_performance_requirements.py
tests/security/: test_vulnerabilities.py
tests/unit/: conftest.py  test_config.py  test_cors_middleware.py  test_database.py  test_dockerfile_commands.py  test_enhanced_face_analysis.py  test_file_utils.py  test_healthcheck_config.py  test_heic_support.py  test_liveness_routes.py  test_liveness_service.py  test_ml_service.py  test_models.py  test_phase1_docker_infrastructure.py  test_phase1_functional_coverage.py  test_phase1_infrastructure.py  test_phase1_infrastructure_complete.py  test_phase1_infrastructure_integration.py  test_phase1_quick_check.py  test_reference_routes.py  test_reference_routes_final.py  test_reference_routes_fixed.py  test_reference_service.py  test_services.py  test_session_service.py  test_storage_service.py  test_structured_logging.py  test_utils.py  test_utils_decorators.py  test_validation_service.py  test_validators.py  test_verify_routes.py  test_verify_service.py  test_webhook_service.py
